--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Tushar GS's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr>
-    <h3> <a href="/public/movie-ranking.html" target="_blank">Movie Ranking Project</a></h3><br>
+    <h3> <a href="./public/movie-ranking.html" target="_blank">Movie Ranking Project</a></h3><br>
     <img src="Movie ranking.png" alt="Movie ranking" style="width: 500px;"><br><br>
 
     <h3><a href="/public/birthday-invitation.html" target="_blank">Birthday Invitation Project </a></h3>
