--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <h3> <a href="./public/movie-ranking.html" target="_blank">Movie Ranking Project</a></h3><br>
     <img src="Movie ranking.png" alt="Movie ranking" style="width: 500px;"><br><br>
 
-    <h3><a href="/public/birthday-invitation.html" target="_blank">Birthday Invitation Project </a></h3>
+    <h3><a href="./public/birthday-invitation.html" target="_blank">Birthday Invitation Project </a></h3>
     <img src="Birthday invitation.png" alt="" style="width: 400px;">
     <hr>
-    <h3> <a href="/public/aboutme.html" target="_blank">About Me</a>
-        <a href="/public/contactme.html" target="_blank">Contact Me</a>
+    <h3> <a href="./public/aboutme.html" target="_blank">About Me</a>
+        <a href="./public/contactme.html" target="_blank">Contact Me</a>
     </h3>
 
 
